test_suite/tests/errors/multiple_state_attribute_blocks.rs
use banish::banish;

fn main() {
    banish! {
        #[trace]
        #[max_iter = 5]
        @foo
            done? { return; }
    }
}
